# =============================================================================
# @file    setup.cfg
# @brief   Package metadata and PyPI configuration
# @created 2021-03-17
# @license Please see the file named LICENSE in the project directory
# @website https://github.com/caltechlibrary/dibs
# =============================================================================

[metadata]
name          = dibs
version       = 0.5.0
description   = DIBS (Digital Borrowing System) is an implementation of Controlled Digital Lending
author        = Michael Hucka, Robert S. Doiel, Tommy Keswick, Stephen Davison
author_email  = helpdesk@library.caltech.edu
license       = BSD 3-clause
license_files = LICENSE
url           = https://github.com/caltechlibrary/dibs
# The remaining items below are used by PyPI.
project_urls  =
  Source Code = https://github.com/caltechlibrary/dibs
  Bug Tracker = https://github.com/caltechlibrary/dibs/issues
keywords      = Python, utilities
classifiers   =
  Development Status :: 4 - Beta
  Environment :: Web Environment
  Framework :: Bottle
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Programming Language :: Python
  Programming Language :: Python :: 3.8
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = False
python_requires = >= 3.8
